--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,4 @@
 {
-  "functions": {
-    "api/index.py": {
-    }
-  }
+  "builds": [{ "src": "api/index.py", "use": "@vercel/python" }],
+  "routes": [{ "src": "/(.*)", "dest": "api/index.py" }]
 }
